Add reformat reg section. Fix links

--- a/docs/fundamentals/regularization/rotated_gradients.ipynb
+++ b/docs/fundamentals/regularization/rotated_gradients.ipynb
@@ -2,13 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fd270354",
+   "id": "d1c00010",
    "metadata": {},
    "source": [
-    "# Joint Inversion\n",
+    "(rotated-gradients)=\n",
     "\n",
-    "To be continued ..."
+    "# Rotated Gradients\n",
+    "\n",
+    "This section provides details about the rotation of gradient penalties to enforce trends in the model."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35b60ef2-b3c4-4074-b7ce-4e8835a5c3f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
