--- a/docs/fundamentals/regularization/sparse.ipynb
+++ b/docs/fundamentals/regularization/sparse.ipynb
@@ -7,59 +7,10 @@
    "source": [
     "(lp-norm)=\n",
     "\n",
-    "## Sparse regularization\n",
+    "# Sparse regularization\n",
     "\n",
     "\n",
-    "It is possible to generalize the conventional least-squares approach such that we can recover different solutions with variable degrees of sparsity. The goal is to explore the model space by changing our assumption about the character of the solution, in terms of the volume of the anomalies and the sharpness of their edges. We can do this by changing the \"ruler\" by which we evaluate the model function $f(\\mathbf{m})$.\n",
-    "\n",
-    "\n",
-    "### Approximated $L_p$-norm\n",
-    "\n",
-    "The general $L_p$ norm measure \n",
-    "\n",
-    "$$\n",
-    "\\phi(m) = \\| f(\\mathbf{m}) \\|_p\n",
-    "$$\n",
-    "\n",
-    "can also be expressed as\n",
-    "\n",
-    "$$\n",
-    "\\phi(m) = \\sum_{j}^M {|f(m)_i |}^p\n",
-    "$$\n",
-    "\n",
-    "For $p<=1$, the function is non-linear with respect to the model. It is possible to approximate the function in a linearized form as  \n",
-    "\n",
-    "$$\n",
-    "\\sum_{j}^M {|f(m)_i |}^p \\approx \\sum_{i} {\\frac{ {f(m)_i}^2}{\\left( {{f(m)_i}}^{2} + \\epsilon^2 \\right)^{1-p/2 }}}\n",
-    "$$\n",
-    "\n",
-    "where $p$ is any constant between $[0,\\;2]$. This is a decent approximation of the $l_p$-norm for any of the functions presented in the [L2-norm](l2-norm) section.\n",
-    "\n",
-    "![lp_norm](./images/lp_norm.png)\n",
-    "\n",
-    "Note that choosing a different $l_p$-norm greatly changes how we measure the function $f(m)$. Rather than simply increasing exponentially with the size of $f(m)$, small norms increase the penalty on low $f(m)$ values.\n",
-    "As $p\\rightarrow 0$, we attempt to recover as few non-zero elements, which in turn favour sparse solutions.\n",
-    "\n",
-    "Since it is a non-linear function with respect to $\\mathbf{m}$, we must first linearize it as\n",
-    "\n",
-    "$$\n",
-    "\\| f(\\mathbf{m})_i \\|_p \\approx \\| \\mathbf{R}_i f(\\mathbf{m})_i\\|\n",
-    "$$\n",
-    "\n",
-    "where\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{R}_i = {\\frac{1}{\\left( {{f(m)^{(k-1)}_i}}^{2} + \\epsilon^2 \\right)^{1-p/2 }}}\\,.\n",
-    "$$\n",
-    "\n",
-    "Here, the superscript $(k)$ denotes the iteration step of the inversion. This is also known as an iterative re-weighted least-squares (IRLS) method. For more details on the implementation, refer to {cite:t}`fournier_2019`.\n",
-    "\n",
-    "The next two sub-sections apply this methodology to the [model smallness](reference-model) and [model smoothness](model-smoothness) regularizers.\n",
-    "\n",
-    "![reg_lp](./images/regularization_lp.png)\n",
-    "\n",
-    "\n",
-    "<p style=\"page-break-after:always;\"></p>"
+    "It is possible to generalize the conventional least-squares approach such that we can recover different solutions with variable degrees of sparsity. By sparsity, we mean fewer model cells (or gradients) away from the reference, but with larger values. The goal is to explore the model space by changing our assumption about the character of the solution, in terms of the volume of the anomalies and the sharpness of their edges. We can do this by changing the \"ruler\" by which we evaluate the model function $f(\\mathbf{m})$."
    ]
   },
   {
@@ -69,7 +20,7 @@
    "source": [
     "(reference-model)=\n",
     "\n",
-    "### Smallness norm model\n",
+    "## Smallness norm model\n",
     "\n",
     "The first option is to impose sparsity assumptions on the model values.\n",
     "\n",
@@ -107,11 +58,11 @@
    "source": [
     "(model-smoothness)=\n",
     "\n",
-    "### Smoothness norm model\n",
+    "## Smoothness norm model\n",
     "\n",
     "Next, we explore the effect of applying sparse norms on the model gradients. We have two options.\n",
     "\n",
-    "#### Gradient type: Total\n",
+    "### Gradient type: Total\n",
     "\n",
     "The favoured approach is to measure the total gradient of the model\n",
     "\n",
@@ -139,7 +90,7 @@
     "\n",
     "No reference model was used ($\\alpha_s = 0$) with uniform norm values on all three Cartesian components.\n",
     "\n",
-    "All those models also fit the data to the target [data misfit](data_misfit) and are therefore valid solutions to the inversion. Note that as $p \\rightarrow 0$ the edges of the anomaly become tighter while variability inside the body diminishes. They generally agree on the center position of the anomaly but differ greatly on the extent and shape.\n",
+    "All those models also fit the data to the target [data misfit](data-misfit) and are therefore valid solutions to the inversion. Note that as $p \\rightarrow 0$ the edges of the anomaly become tighter while variability inside the body diminishes. They generally agree on the center position of the anomaly but differ greatly on the extent and shape.\n",
     "\n",
     "\n",
     "\n",
@@ -188,6 +139,53 @@
     "The next logical step is to mix different norms on both the smallness and smoothness constraints. This gives rise to a \"space\" of models bounded by all possible combinations on $[0, 2]$ applied to each function independently.\n",
     "\n",
     "To be continued..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8b6527c-842e-4b8f-8619-bb96ff3deffc",
+   "metadata": {},
+   "source": [
+    "### Background: Approximated $L_p$-norm\n",
+    "\n",
+    "The standard $L_p$ norm measure is generally written as\n",
+    "\n",
+    "$$\n",
+    "\\phi(m) = \\| f(\\mathbf{m}) \\|_p ] \\;,\n",
+    "$$\n",
+    "\n",
+    "which can also be expressed as\n",
+    "\n",
+    "$$\n",
+    "\\phi(m) = \\sum_{j}^M {|f(m)_i |}^p \\;.\n",
+    "$$\n",
+    "\n",
+    "For $p<=1$, the function is non-linear with respect to the model. It is possible to approximate the function in a linearized form as  \n",
+    "\n",
+    "$$\n",
+    "\\sum_{j}^M {|f(m)_i |}^p \\approx \\sum_{i} {\\frac{ {f(m)_i}^2}{\\left( {{f(m)_i}}^{2} + \\epsilon^2 \\right)^{1-p/2 }}}\n",
+    "$$\n",
+    "\n",
+    "where $p$ is any constant between $[0,\\;2]$. This is a decent approximation of the $l_p$-norm for any of the functions presented in the [L2-norm](l2-norm) section.\n",
+    "\n",
+    "![lp_norm](./images/lp_norm.png)\n",
+    "\n",
+    "Note that choosing a different $l_p$-norm greatly changes how we measure the function $f(m)$. Rather than simply increasing exponentially with the size of $f(m)$, small norms increase the penalty on low $f(m)$ values.\n",
+    "As $p\\rightarrow 0$, we attempt to recover as few non-zero elements, which in turn favour sparse solutions.\n",
+    "\n",
+    "Since it is a non-linear function with respect to $\\mathbf{m}$, we must first linearize it as\n",
+    "\n",
+    "$$\n",
+    "\\| f(\\mathbf{m})_i \\|_p \\approx \\| \\mathbf{R}_i \\mathbf{W}_i f(\\mathbf{m})_i\\|\n",
+    "$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{R}_i = {\\frac{1}{\\left( {{f(m)^{(k-1)}_i}}^{2} + \\epsilon^2 \\right)^{1-p/2 }}}\\,.\n",
+    "$$\n",
+    "\n",
+    "Here, the superscript $(k)$ denotes the iteration step of the inversion. This is also known as an iterative re-weighted least-squares (IRLS) method. For more details on the implementation, refer to {cite:t}`fournier_2019`."
    ]
   },
   {
