--- a/docs/tutorials/airborne_tem.ipynb
+++ b/docs/tutorials/airborne_tem.ipynb
@@ -125,9 +125,9 @@
     "\n",
     "### Refinements\n",
     "\n",
-    "- For the first refinement, we insert 4 cells for the first three octree levels along the flight path. The refinement is done radially around the segments of the flight path curve to assure good numerical accuracy near the receiver locations. This is especially important for EM methods with low frequencies.\n",
+    "- For the first refinement, we insert 4 cells for the first three octree levels along the flight path. The refinement is done radially around the segments of the flight path curve to ensure good numerical accuracy near the receiver locations. This is especially important for EM methods with low frequencies.\n",
     "\n",
-    "- We use a second refinement along topography to get a coarse but continuous air-ground interface outside the area or interest.\n",
+    "- We use a second refinement along topography to get a coarse but continuous air-ground interface outside the area of interest.\n",
     "\n",
     "- Lastly, we refine a \"horizon\" to get a core region at depth with increasing cell size directly below the survey. This is our volume of interest most strongly influenced by the data.\n",
     "\n",
@@ -136,10 +136,10 @@
     "scale: 50%\n",
     "name: atem_refinement\n",
     "---\n",
-    "Refinement strategy used for the atem modeling.\n",
+    "Refinement strategy used for the atem modelling.\n",
     "```\n",
     "\n",
-    "See [Mesh creation](mesh_design) section for general details on the parameters."
+    "See [Mesh creation](mesh-design) section for general details on the parameters."
    ]
   },
   {
