--- a/docs/tutorials/magnetic.ipynb
+++ b/docs/tutorials/magnetic.ipynb
@@ -82,21 +82,21 @@
     "\n",
     "### Refinements\n",
     "\n",
-    "- For the first refinement, we insert two cells around our survey lines. The refinement is done radially around the segments of the curve to assure that the air-ground interface near the receivers are modeled with the finest cell size.\n",
+    "- For the first refinement, we insert two cells around our survey lines. The refinement is done radially around the segments of the curve to ensure that the air-ground interface near the receivers is modelled with the finest cell size.\n",
     "\n",
-    "- A second refinement is used along topography to get a coarse but continuous air-ground interface outside the area or interest.\n",
+    "- A second refinement is used along topography to get a coarse but continuous air-ground interface outside the area of interest.\n",
     "\n",
-    "- The third refinement \"horizon\" is used to get a core region at depth with increasing cell size directly below the survey. This is our volume of interest most strongly influence by the data.\n",
+    "- The third refinement, \"horizon\", is used to get a core region at depth with increasing cell size directly below the survey. This is our volume of interest most strongly influenced by the data.\n",
     "\n",
     "```{figure} ./images/magnetics/mesh_refinement.png\n",
     "---\n",
     "scale: 50%\n",
     "name: mag_refinement\n",
     "---\n",
-    "Refinement strategy used for the magnetic modeling.\n",
+    "Refinement strategy used for the magnetic modelling.\n",
     "```\n",
     "\n",
-    "See [Mesh creation](mesh_design) section for general details on the parameters.\n"
+    "See [Mesh creation](mesh-design) section for general details on the parameters.\n"
    ]
   },
   {
