--- a/docs/tutorials/tipper.ipynb
+++ b/docs/tutorials/tipper.ipynb
@@ -88,9 +88,9 @@
     "\n",
     "### Refinements\n",
     "\n",
-    "- For the first refinement, we insert 4 cells for the first three octree levels along the flight path. The refinement is done radially around the segments of the flight path curve to assure good numerical accuracy near the receiver locations. This is especially important for EM methods with low frequencies.\n",
+    "- For the first refinement, we insert 4 cells for the first three octree levels along the flight path. The refinement is done radially around the segments of the flight path curve to ensure good numerical accuracy near the receiver locations. This is especially important for EM methods with low frequencies.\n",
     "\n",
-    "- We use a second refinement along topography to get a coarse but continuous air-ground interface outside the area or interest.\n",
+    "- We use a second refinement along topography to get a coarse but continuous air-ground interface outside the area of interest.\n",
     "\n",
     "- Lastly, we refine a \"horizon\" to get a core region at depth with increasing cell size directly below the survey. This is our volume of interest most strongly influenced by the data.\n",
     "\n",
@@ -99,10 +99,10 @@
     "scale: 50%\n",
     "name: tipper_refinement\n",
     "---\n",
-    "Refinement strategy used for the tipper modeling.\n",
+    "Refinement strategy used for the tipper modelling.\n",
     "```\n",
     "\n",
-    "See [Mesh creation](mesh_design) section for general details on the parameters."
+    "See [Mesh creation](mesh-design) section for general details on the parameters."
    ]
   },
   {
@@ -114,7 +114,7 @@
     "\n",
     "**Runtime: ~2.0 h**\n",
     "\n",
-    "Tipper data involves 2 receiver configuration (x and y), with two components (real and imaginary) and measured over 6 frequencies. Balancing all this data can be challenging and time consuming. Here we adopt a variable floor strategy based on the 10th percentile of each data layer.\n",
+    "Tipper data involves 2 receiver configurations (x and y), with two components (real and imaginary) and measured over 6 frequencies. Balancing all this data can be challenging and time-consuming. Here, we adopt a variable floor strategy based on the 10th percentile of each data layer.\n",
     "\n",
     "```{figure} ./images/tipper/tipper_uncerts.png\n",
     "---\n",
@@ -125,7 +125,7 @@
     "\n",
     "This approach is a good starting point, but experimentation is generally required.\n",
     "\n",
-    "After running the inversion we recover the following solution:\n",
+    "After running the inversion, we recover the following solution:\n",
     "\n",
     "\n",
     "```{figure} ./images/tipper/tipper_unconstrained.png\n",
@@ -134,11 +134,19 @@
     "---\n",
     "(Left) Horizontal section at 120 m elevation after reaching target misfit (iteration 5).\n",
     "\n",
-    "(Right)(top) 2D profiles of observed versus predicted data for all 4 channels and 6 frequencies and (bottom) vertical section through the conductivity model below the same line.\n",
+    "(Right)(top) 2D profiles of observed versus predicted data for all 4 channels and 6 frequencies, and (bottom) vertical section through the conductivity model below the same line.\n",
     "```\n",
     "\n",
     "Despite our simplistic floor uncertainties, the inversion managed to converge fairly quickly to a reasonable model that fits our data well. We have recovered a clear conductor at depth that overlaps with the ore body. However, the inversion could not resolve the thin conductive overburden layer, as expected by the low frequency range of the tipper system."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6db10672-d6a6-4cf9-bb21-03ae881dff7b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
