--- a/docs/fundamentals/regularization/regularization.ipynb
+++ b/docs/fundamentals/regularization/regularization.ipynb
@@ -9,11 +9,10 @@
     "\n",
     "# Regularization (Constraints)\n",
     "\n",
-    "This section focuses on the regularization functions, or constraints, that can be used to inject \"geological knowledge\" into the inversion process. More specifically, this section covers the weighted least-squares regularization functions.\n",
+    "This section focuses on the regularization functions, or model constraints, that can inject \"geological knowledge\" into the inversion process. More specifically, this section covers the weighted least-squares regularization functions. Readers are invited to visit the following sections for more advanced options\n",
     "\n",
-    "While often referred to as an \"unconstrained inversion\", one could argue that the conventional model norm regularizations do still incorporate some degree of geological information, at least in the form of physical property distribution. The type of a priori information available dictates the complexity of the constraints. The next sections cover more advanced features\n",
-    "\n",
-    "- [Sparse Lp-norms](lp-norm)"
+    "- [Sparse Lp-norms](lp-norm)\n",
+    "- [Rotate Gradients](rotated-gradients)"
    ]
   },
   {
@@ -25,22 +24,22 @@
     "\n",
     "## Least-squares regularization\n",
     "\n",
-    "The conventional L2-norm regularization function imposes constraints based on the least-squares measures, either of the model and/or its spatial gradients. We can express these various constraints as\n",
+    "The conventional L2-norm regularization function imposes constraints based on least-squares measures, either of the model and/or its spatial gradients. We can express these various constraints as\n",
     "\n",
     "$$\n",
-    "\\phi(m) = \\| \\mathbf{W} f(\\mathbf{m}) \\|_2^2 \\;,\n",
+    "\\phi(m) = \\| f(\\mathbf{m}) \\|_2^2 \\;,\n",
     "$$\n",
     "\n",
-    "where $f(\\mathbf{m})$ is any linear function of the model $\\mathbf{m}$. The generic matrix $\\mathbf{W}$ contains weights that can be used to tune the influence of the function spatially. See the section on [Weights](weights) for more details on the matter.\n",
+    "where $f(\\mathbf{m})$ is any linear function of the model $\\mathbf{m}$. While often referred to as an *unconstrained inversion*, one could argue that the conventional least-squares regularization does still incorporate first-degree information about the geological background, at least in the form of physical property distribution.\n",
     "\n",
     "(small-ref)=\n",
     "\n",
     "### Model smallness (reference)\n",
     "\n",
-    "In the seminal work of {cite:t}`TikhonovArsenin77`, the function $f(\\mathbf{m})$ simply measures the deviation between the inversion model from a reference\n",
+    "In the seminal work of {cite:t}`TikhonovArsenin77`, the function $f(\\mathbf{m})$ simply measures the deviation between the inversion model from a reference value\n",
     "\n",
     "$$\n",
-    "f_s(\\mathbf{m}) = \\mathbf{m} - \\mathbf{m}_{ref} \\;,\n",
+    "\\phi_s = \\| \\mathbf{m} - \\mathbf{m}_{ref} \\|\n",
     "$$\n",
     "\n",
     "where $\\mathbf{m}_{ref}$ is a reference model. This function tries to keep the model \"small\", in terms of deviation from the reference values. The reference model can vary in complexity, from a constant background value to a full 3D geological representation of the physical property. \n",
@@ -55,14 +54,10 @@
     "A second set of terms can be added to the regularization function to apply constraints on the model gradients, or the roughness, of the solution. Following the notation used in {cite:t}`LiOldenburg1998`,\n",
     "\n",
     "$$\n",
-    "f_x(\\mathbf{m}) = \\mathbf{G}_x (\\mathbf{m} - \\mathbf{m}_{ref}) \\;,\n",
+    "\\phi_i(\\mathbf{m}) = \\| \\mathbf{G}_i (\\mathbf{m} - \\mathbf{m}_{ref}) \\|\\;,\n",
     "$$\n",
     "\n",
-    "where $\\mathbf{G}_x$ is a finite difference operator that measures the gradient of the model $\\mathbf{m}$ along one of the Cartesian directions (`x` for Easting). These functions enforce the model to remain smooth, as large gradients (sharp contrasts) are penalized strongly. Two additional terms are needed to measure the model gradients along the Northing ($f_y$) and vertical ($f_z$) direction.\n",
-    "\n",
-    "(weights)=\n",
-    "\n",
-    "### Scaling\n",
+    "where $\\mathbf{G}_i$ is a finite difference operator that measures the gradient of the model $\\mathbf{m}$ along one of the Cartesian directions. For 3D inversions, three functions are needed to measure the model gradients along the Easting ($f_x$), Northing ($f_y$) and vertical ($f_z$) directions. These functions enforce the model to remain smooth, as large gradients (sharp contrasts) are penalized strongly. \n",
     "\n",
     "For 3D inverse problems, the full regularization function contains 4 terms: one for the reference model and three terms for the smoothness measures along the three Cartesian axes:\n",
     "\n",
@@ -70,27 +65,50 @@
     "\\phi_m = \\sum_{i = s,x,y,z} \\| \\mathbf{W}_i f_i(\\mathbf{m}) \\|_2^2\n",
     "$$\n",
     "\n",
-    "Note that we have added scaling parameters $\\alpha_i$ to each function. The role of those multipliers is two-fold:\n",
+    "Weighting matrices $\\mathbf{W}_i$ are added to each function to scale the constraints among each other. \n",
     "\n",
-    "- User-defined weights to emphasize the contribution of a particular function. This is typically done for advanced constraints to reflect variable degrees of confidence in the reference geological model (e.g. high near the surface, low at depth). \n",
+    "(weights)=\n",
     "\n",
-    "- Default scaling to level the functions with each other.\n",
+    "### Weights\n",
     "\n",
-    "Dimensionality scales arise from the difference operators:\n",
+    "The weighting matrices $\\mathbf{W}_i$ are made up of default and user-defined weights\n",
     "\n",
     "$$\n",
-    "\\phi_x(m) = \\sum_{i=1}^{N_{fx}} \\left(\\frac{\\Delta m_i}{h_{xi}}\\right)^2\n",
+    "\\mathbf{W}_i = \\mathbf{W}_h * \\mathbf{W}_j * \\mathbf{W}_u\n",
     "$$\n",
     "\n",
-    "such that $\\Delta m_i$ is the difference in model values between two cells separated by a distance $h_{xi}$ along the x-axis. When adding together the [reference](small-ref) and [model smoothness](smooth-ref) terms in the regularization, it is obvious that the scale factor of $h^{-2}$ would favor $\\phi_m$ to have a larger impact on the solution. The standard practice is to weigh down the influence of the reference model accordingly.\n",
+    "#### User-defined weights  ($\\mathbf{W}_u$)\n",
     "\n",
-    "\n",
-    "**Note**\n",
-    "\n",
-    "For all SimPEG inversions, dimensionality scaling of $h^2$ is applied directly for the gradient terms by the program, allowing the default state to be all 1s for simplicity.\n",
-    "\n",
+    "User-defined weights can be tuned to emphasize the contribution of a particular function. This can be done globally, as a constant, or locally on a cell-by-cell basis. Weights may reflect variable degrees of confidence in the reference geological model (e.g. high near the surface, low at depth), or to accentuate specific trends in the model.\n",
     "\n",
     "![reg_alphas](./images/regularization_alpha.png)\n",
+    "\n",
+    "\n",
+    "#### Sensitivity-based weights ($\\mathbf{W}_j$)\n",
+    "\n",
+    "Sensitivity-based weights are computed as the sum-squares the rows of the sensitivities\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{W}_j = [\\sum_{i=1}^{N} \\mathbf{J}_{ij}^2 + \\epsilon ]^{1/4} \\;,\n",
+    "$$\n",
+    "\n",
+    "where $\\mathbf{J}$ are the sensitivities (Jacobian) of the forward problem. The weighting attempts to compensate for the strong influence of the misfit function near the receiver locations, which would favour a model with high complexity near the surface. A small constant $\\epsilon$ is added to threshold the weights in regions of extremely low sensitivity.\n",
+    "\n",
+    "\n",
+    "#### Dimensionality scaling ($\\mathbf{W}_h$)\n",
+    "\n",
+    "Dimensionality scaling is applied to the gradient terms $\\phi_{i=(x,y,z)}$ as constants to account for length scales in the *smoothness* terms\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{W}_{hi} = h_i \n",
+    "$$\n",
+    "\n",
+    "where $h$ is defined by the smallest cell dimension in each dimension $i=x,y,z$. This default scaling brings the *smallness* and *smoothness* terms to be dimensionally equivalent, which would otherwise be\n",
+    "\n",
+    "$$\n",
+    "dim\\; \\phi_s = M^2, \\; \n",
+    "dim\\; \\phi_x = \\frac{M^2}{H^2}\n",
+    "$$\n",
     "\n",
     "\n",
     "<p style=\"page-break-after:always;\"></p>"
