--- a/docs/fundamentals/regularization/regularization.ipynb
+++ b/docs/fundamentals/regularization/regularization.ipynb
@@ -24,13 +24,16 @@
     "\n",
     "## Least-squares regularization\n",
     "\n",
-    "The conventional L2-norm regularization function imposes constraints based on least-squares measures, either of the model and/or its spatial gradients. We can express these various constraints as\n",
+    "The conventional L2-norm regularization function imposes constraints based on least-squares measures, either of the model and/or its spatial gradients. \n",
+    "\n",
+    "For 3D inverse problems, the full regularization function contains 4 terms: one for the reference model and three terms for the smoothness measures along the three Cartesian axes. We can express these various constraints as\n",
     "\n",
     "$$\n",
-    "\\phi(m) = \\| f(\\mathbf{m}) \\|_2^2 \\;,\n",
+    "\\phi_m = \\sum_{i = s,x,y,z} \\| \\mathbf{W}_i f_i(\\mathbf{m}) \\|_2^2\n",
     "$$\n",
     "\n",
-    "where $f(\\mathbf{m})$ is any linear function of the model $\\mathbf{m}$. While often referred to as an *unconstrained inversion*, one could argue that the conventional least-squares regularization does still incorporate first-degree information about the geological background, at least in the form of physical property distribution.\n",
+    "Weighting matrices $\\mathbf{W}_i$ are added to each function to scale the constraints among each other. \n",
+    "While often referred to as an *unconstrained inversion*, one could argue that the conventional least-squares regularization does still incorporate first-degree information about the geological background, at least in the form of physical property distribution. The following sections provide details on each element of the regularization.\n",
     "\n",
     "(small-ref)=\n",
     "\n",
@@ -39,7 +42,7 @@
     "In the seminal work of {cite:t}`TikhonovArsenin77`, the function $f(\\mathbf{m})$ simply measures the deviation between the inversion model from a reference value\n",
     "\n",
     "$$\n",
-    "\\phi_s = \\| \\mathbf{m} - \\mathbf{m}_{ref} \\|\n",
+    "\\mathbf{f}_s = \\mathbf{m} - \\mathbf{m}_{ref}\n",
     "$$\n",
     "\n",
     "where $\\mathbf{m}_{ref}$ is a reference model. This function tries to keep the model \"small\", in terms of deviation from the reference values. The reference model can vary in complexity, from a constant background value to a full 3D geological representation of the physical property. \n",
@@ -54,71 +57,58 @@
     "A second set of terms can be added to the regularization function to apply constraints on the model gradients, or the roughness, of the solution. Following the notation used in {cite:t}`LiOldenburg1998`,\n",
     "\n",
     "$$\n",
-    "\\phi_i(\\mathbf{m}) = \\| \\mathbf{G}_i (\\mathbf{m} - \\mathbf{m}_{ref}) \\|\\;,\n",
+    "\\mathbf{f}_i = \\mathbf{G}_i (\\mathbf{m} - \\mathbf{m}_{ref}),\n",
     "$$\n",
     "\n",
-    "where $\\mathbf{G}_i$ is a finite difference operator that measures the gradient of the model $\\mathbf{m}$ along one of the Cartesian directions. For 3D inversions, three functions are needed to measure the model gradients along the Easting ($f_x$), Northing ($f_y$) and vertical ($f_z$) directions. These functions enforce the model to remain smooth, as large gradients (sharp contrasts) are penalized strongly. \n",
-    "\n",
-    "For 3D inverse problems, the full regularization function contains 4 terms: one for the reference model and three terms for the smoothness measures along the three Cartesian axes:\n",
-    "\n",
-    "$$\n",
-    "\\phi_m = \\sum_{i = s,x,y,z} \\| \\mathbf{W}_i f_i(\\mathbf{m}) \\|_2^2\n",
-    "$$\n",
-    "\n",
-    "Weighting matrices $\\mathbf{W}_i$ are added to each function to scale the constraints among each other. \n",
+    "where $\\mathbf{G}_i$ is a finite difference operator that measures the gradient of the model $\\mathbf{m}$ along one of the Cartesian directions. \n",
+    "Three functions are needed to calculate the model gradients along the Easting ($f_x$), Northing ($f_y$) and vertical ($f_z$) directions. These functions enforce the model to remain smooth, as large gradients (sharp contrasts) are penalized strongly. \n",
     "\n",
     "(weights)=\n",
     "\n",
     "### Weights\n",
     "\n",
-    "The weighting matrices $\\mathbf{W}_i$ are made up of default and user-defined weights\n",
+    "The diagonal weighting matrices $\\mathbf{W}_i$ are made up of default and user-defined weights\n",
     "\n",
     "$$\n",
-    "\\mathbf{W}_i = \\mathbf{W}_h * \\mathbf{W}_j * \\mathbf{W}_u\n",
+    "\\mathbf{W}_i = diag(\\mathbf{w}_h * \\mathbf{w}_s * \\mathbf{w}_u)\n",
     "$$\n",
     "\n",
-    "#### User-defined weights  ($\\mathbf{W}_u$)\n",
+    "#### User-defined weights  ($\\mathbf{w}_u$)\n",
     "\n",
     "User-defined weights can be tuned to emphasize the contribution of a particular function. This can be done globally, as a constant, or locally on a cell-by-cell basis. Weights may reflect variable degrees of confidence in the reference geological model (e.g. high near the surface, low at depth), or to accentuate specific trends in the model.\n",
     "\n",
     "![reg_alphas](./images/regularization_alpha.png)\n",
     "\n",
     "\n",
-    "#### Sensitivity-based weights ($\\mathbf{W}_j$)\n",
+    "#### Sensitivity-based weights ($\\mathbf{w}_s$)\n",
     "\n",
     "Sensitivity-based weights are computed as the sum-squares the rows of the sensitivities\n",
     "\n",
     "$$\n",
-    "\\mathbf{W}_j = [\\sum_{i=1}^{N} \\mathbf{J}_{ij}^2 + \\epsilon ]^{1/4} \\;,\n",
+    "\\mathbf{w}_s = [\\sum_{i=1}^{N} \\mathbf{J}_{ij}^2 + \\epsilon ]^{1/4} \\;,\n",
     "$$\n",
     "\n",
     "where $\\mathbf{J}$ are the sensitivities (Jacobian) of the forward problem. The weighting attempts to compensate for the strong influence of the misfit function near the receiver locations, which would favour a model with high complexity near the surface. A small constant $\\epsilon$ is added to threshold the weights in regions of extremely low sensitivity.\n",
     "\n",
     "\n",
-    "#### Dimensionality scaling ($\\mathbf{W}_h$)\n",
+    "#### Dimensionality scaling ($\\mathbf{w}_h$)\n",
     "\n",
     "Dimensionality scaling is applied to the gradient terms $\\phi_{i=(x,y,z)}$ as constants to account for length scales in the *smoothness* terms\n",
     "\n",
     "$$\n",
-    "\\mathbf{W}_{hi} = h_i \n",
+    "\\mathbf{w}_{hi} = h_i \n",
     "$$\n",
     "\n",
     "where $h$ is defined by the smallest cell dimension in each dimension $i=x,y,z$. This default scaling brings the *smallness* and *smoothness* terms to be dimensionally equivalent, which would otherwise be\n",
     "\n",
     "$$\n",
-    "dim\\; \\phi_s = M^2, \\; \n",
-    "dim\\; \\phi_x = \\frac{M^2}{H^2}\n",
+    "dim\\; \\phi_s = [m]^2, \\; \n",
+    "dim\\; \\phi_x = \\frac{[m]^2}{[h]^2}\n",
     "$$\n",
     "\n",
     "\n",
     "<p style=\"page-break-after:always;\"></p>"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "17654719-df2b-4903-8217-5487f098b204",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
