--- a/docs/fundamentals/regularization/sparse.ipynb
+++ b/docs/fundamentals/regularization/sparse.ipynb
@@ -60,11 +60,7 @@
     "\n",
     "## Smoothness norm model\n",
     "\n",
-    "Next, we explore the effect of applying sparse norms on the model gradients. We have two options.\n",
-    "\n",
-    "### Gradient type: Total\n",
-    "\n",
-    "The favoured approach is to measure the total gradient of the model\n",
+    "Next, we explore the effect of applying sparse norms on the model gradients. \n",
     "\n",
     "$$\n",
     "\\phi(m) = \\| |\\nabla \\mathbf{m}| \\|_p\n",
@@ -90,43 +86,7 @@
     "\n",
     "No reference model was used ($\\alpha_s = 0$) with uniform norm values on all three Cartesian components.\n",
     "\n",
-    "All those models also fit the data to the target [data misfit](data-misfit) and are therefore valid solutions to the inversion. Note that as $p \\rightarrow 0$ the edges of the anomaly become tighter while variability inside the body diminishes. They generally agree on the center position of the anomaly but differ greatly on the extent and shape.\n",
-    "\n",
-    "\n",
-    "\n",
-    "**Note**\n",
-    "\n",
-    "In the literature, the majority of studies on sparse norms use the L1-norm on the model gradients, also called `Total Variation` inversion. While the implementation may differ slightly, the general $l_p$-norm methodology presented above covers this specific case. We can re-write\n",
-    "\n",
-    "$$\n",
-    "\\sum_{i} {|f(m)_i |}^p \\approx \\sum_{i} {\\frac{ (\\mathbf{G}_x \\mathbf{m})_i^2 + (\\mathbf{G}_y \\mathbf{m})_i^2 + (\\mathbf{G}_z \\mathbf{m})_i^2}{\\left(  (\\mathbf{G}_x \\mathbf{m})_i^2 + (\\mathbf{G}_y \\mathbf{m})_i^2 + (\\mathbf{G}_z \\mathbf{m})_i^2 + \\epsilon^2 \\right)^{1-p/2 }}} \\;.\n",
-    "$$\n",
-    "\n",
-    "Then for $p=1$\n",
-    "\n",
-    "$$\n",
-    "\\phi(m) \\approx \\sum_{i} \\sqrt{(\\mathbf{G}_x \\mathbf{m})_i^2 + (\\mathbf{G}_y \\mathbf{m})_i^2 + (\\mathbf{G}_z \\mathbf{m})_i^2} \\;,\n",
-    "$$\n",
-    "\n",
-    "we recover the total-variation (TV) function. \n",
-    "Lastly, for $p=2$\n",
-    "\n",
-    "$$\n",
-    "\\phi(m) = \\sum_{i} (\\mathbf{G}_x \\mathbf{m})_i^2 + (\\mathbf{G}_y \\mathbf{m})_i^2 + (\\mathbf{G}_z \\mathbf{m})_i^2 \\;,\n",
-    "$$\n",
-    "\n",
-    "we recover the smooth regularization.\n",
-    "\n",
-    "\n",
-    "#### Gradient type: Components\n",
-    "\n",
-    "Alternatively, we can treat each gradient term independently, such that\n",
-    "\n",
-    "$$\n",
-    "\\phi(m) = \\| \\mathbf{G}_x \\mathbf{m} \\|_p + \\| \\mathbf{G}_y \\mathbf{m} \\|_p + \\| \\mathbf{G}_z \\mathbf{m} \\|_p \\;.\n",
-    "$$\n",
-    "\n",
-    "This formulation tends to recover box-like anomalies with edges aligned with the Cartesian axes. This is generally not desirable unless the gradients can be rotated in 3D.\n"
+    "All those models also fit the data to the target [data misfit](data-misfit) and are therefore valid solutions to the inversion. Note that as $p \\rightarrow 0$ the edges of the anomaly become tighter while variability inside the body diminishes. They generally agree on the center position of the anomaly but differ greatly on the extent and shape.\n"
    ]
   },
   {
@@ -146,7 +106,7 @@
    "id": "e8b6527c-842e-4b8f-8619-bb96ff3deffc",
    "metadata": {},
    "source": [
-    "### Background: Approximated $L_p$-norm\n",
+    "## Background: Approximated $L_p$-norm\n",
     "\n",
     "The standard $L_p$ norm measure is generally written as\n",
     "\n",
@@ -173,7 +133,7 @@
     "Note that choosing a different $l_p$-norm greatly changes how we measure the function $f(m)$. Rather than simply increasing exponentially with the size of $f(m)$, small norms increase the penalty on low $f(m)$ values.\n",
     "As $p\\rightarrow 0$, we attempt to recover as few non-zero elements, which in turn favour sparse solutions.\n",
     "\n",
-    "Since it is a non-linear function with respect to $\\mathbf{m}$, we must first linearize it as\n",
+    "Since it is a non-linear function with respect to $\\mathbf{m}$, we can linearize it as\n",
     "\n",
     "$$\n",
     "\\| f(\\mathbf{m})_i \\|_p \\approx \\| \\mathbf{R}_i \\mathbf{W}_i f(\\mathbf{m})_i\\|\n",
@@ -185,16 +145,39 @@
     "\\mathbf{R}_i = {\\frac{1}{\\left( {{f(m)^{(k-1)}_i}}^{2} + \\epsilon^2 \\right)^{1-p/2 }}}\\,.\n",
     "$$\n",
     "\n",
-    "Here, the superscript $(k)$ denotes the iteration step of the inversion. This is also known as an iterative re-weighted least-squares (IRLS) method. For more details on the implementation, refer to {cite:t}`fournier_2019`."
+    "Here, the superscript $(k)$ denotes the iteration step of the inversion. This is also known as an iterative re-weighted least-squares (IRLS) method. For more details on the implementation, refer to {cite:t}`fournier_2019`.\n",
+    "\n",
+    "### Note on `Total Variation`\n",
+    "\n",
+    "In the literature and other inversion software, sparsity constraints are imposed as an L1-norm on the model gradients, also called `Total Variation` inversion. While the implementation may differ slightly, the general $l_p$-norm methodology presented above encompasses this specific case. We can write\n",
+    "\n",
+    "$$\n",
+    "\\sum_{i} {|f(m)_i |}^p \\approx \\sum_{i} {\\frac{ (\\mathbf{G}_x \\mathbf{m})_i^2 + (\\mathbf{G}_y \\mathbf{m})_i^2 + (\\mathbf{G}_z \\mathbf{m})_i^2}{\\left(  (\\mathbf{G}_x \\mathbf{m})_i^2 + (\\mathbf{G}_y \\mathbf{m})_i^2 + (\\mathbf{G}_z \\mathbf{m})_i^2 + \\epsilon^2 \\right)^{1-p/2 }}} \\;.\n",
+    "$$\n",
+    "\n",
+    "Then for $p=1$\n",
+    "\n",
+    "$$\n",
+    "\\phi(m) \\approx \\sum_{i} \\sqrt{(\\mathbf{G}_x \\mathbf{m})_i^2 + (\\mathbf{G}_y \\mathbf{m})_i^2 + (\\mathbf{G}_z \\mathbf{m})_i^2} \\;,\n",
+    "$$\n",
+    "\n",
+    "which recovers the total-variation (TV) function. \n",
+    "Lastly, for $p=2$\n",
+    "\n",
+    "$$\n",
+    "\\phi(m) = \\sum_{i} (\\mathbf{G}_x \\mathbf{m})_i^2 + (\\mathbf{G}_y \\mathbf{m})_i^2 + (\\mathbf{G}_z \\mathbf{m})_i^2 \\;,\n",
+    "$$\n",
+    "\n",
+    "which recovers the smooth regularization. The Total Variation (L1) and Smooth (L2) inversion strategies are therefore specific cases of the more general Lp-norm regularization function for $p \\in [0, 2]$."
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2bf887ab",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38eb4170-29e8-47e7-8c7f-972c52d8e8ab",
    "metadata": {},
-   "source": [
-    "<p style=\"page-break-after:always;\"></p>\n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
