--- a/docs/references.bib
+++ b/docs/references.bib
@@ -50,6 +50,15 @@
   address   = {Washington, D.C.},
 }
 
+@Article{LiOldenburg2000,
+  author    = {Y. Li. and D. W. Oldenburg},
+  title     = {Incorporating geological dip information into geophysical inversions},
+  journal   = {Geophysics},
+  year      = {2000},
+  volume    = {65},
+  pages     = {148-157},
+}
+
 @Article{LiOldenburg1998,
   author    = {Y. Li. and D. W. Oldenburg},
   title     = {3-D inversion of gravity data},
