--- a/docs/tutorials/magnetic.ipynb
+++ b/docs/tutorials/magnetic.ipynb
@@ -7,10 +7,11 @@
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
     "\n",
+    "(magnetic-tutorial)=\n",
+    "\n",
     "# Magnetic Inversion\n",
     "\n",
-    "This section focuses on the inversion of magnetic data using a scalar (susceptibility) and a magnetization (vector) approach generated from the Flin Flon magnetic model. We also cover some strategies on how to remove regional signal and the use of compact norms.\n",
-    "\n",
+    "This section focuses on the inversion of magnetic scalar (susceptibility) and vector (magnetization) approaches with data generated from the Flin Flon magnetic model. We also cover some strategies on regional signal removal and the use of compact norms.\n",
     "\n",
     "\n",
     "```{figure} ./images/magnetics/mag_model.png\n",
