Add figure, start reformating text

--- a/docs/fundamentals/regularization/rotated_gradients.ipynb
+++ b/docs/fundamentals/regularization/rotated_gradients.ipynb
@@ -9,7 +9,14 @@
     "\n",
     "# Rotated Gradients\n",
     "\n",
-    "This section provides details about the rotation of gradient penalties to enforce trends in the model. This option is useful for counteracting modelling bias due to survey design (wide line separation) and reinforcing known geological trends. "
+    "This section provides details about the rotation of gradient penalties to enforce trends in the model. This option is useful for counteracting modelling bias due to survey design (wide line separation) or reinforcing known geological trends, as depicted in the image below. \n",
+    "\n",
+    "```{figure} ./images/rotated_demo.png\n",
+    "---\n",
+    "scale: 30%\n",
+    "---\n",
+    "(Top) Horizontal and (bottom) verticel sections through (left) a simple dipping dyke model under smooth topography. (Center) Model recovered with the conventional smooth norm inversion. (Right) Compact model obtained with the rotation of the objective function at $45\\circ$ dip and $90\\circ$ azimuth. \n",
+    "```"
    ]
   },
   {
@@ -19,7 +26,7 @@
    "source": [
     "## Background\n",
     "\n",
-    "As covered in the [Regularization](smooth-ref) section, penalties on the model gradients (smoothness) are by default applied along each of the Cartesian axes:\n",
+    "As covered in the [Regularization](smooth-ref) section, penalties on the model gradients (smoothness) are defined as:\n",
     "\n",
     "$$\n",
     "\\mathbf{f}_i = \\mathbf{G}_i (\\mathbf{m} - \\mathbf{m}_{ref}),\n",
@@ -31,15 +38,8 @@
     "\\mathbf{\\hat f}_i = \\mathbf{\\hat G}_i (\\mathbf{m} - \\mathbf{m}_{ref}),\n",
     "$$\n",
     "\n",
-    "where $\\mathbf{\\hat G}_i$ is the rotated gradient along one of the $u$, $v$ and $w$-axis. \n",
+    "where $\\mathbf{\\hat G}_i$ is the rotated gradient along one of the $u$, $v$ and $w$-axis. `Simpeg-drivers` uses a combination of forward and backward gradient operators to achieve better symmetry in 3D. The gradient operators are constructed based on the partial volumes intercepted by ghost cells rotated about the center of each cell. The partial volumes include diagonal neighbours.  \n",
     "\n",
-    "![grad](./images/gradient_direction.png)\n",
-    "\n",
-    "\n",
-    "In the case of rotated gradients, we want to treat each component independently such that trends can be reinforced along specific directions.\n",
-    "$$\n",
-    "\\phi(m) = \\| \\mathbf{G}_x \\mathbf{m} \\|_p + \\| \\mathbf{G}_y \\mathbf{m} \\|_p + \\| \\mathbf{G}_z \\mathbf{m} \\|_p \\;.\n",
-    "$$\n",
     "\n"
    ]
   },
@@ -48,18 +48,35 @@
    "id": "1ec1e9e0-2f64-41ec-875f-56da5e5ed2ee",
    "metadata": {},
    "source": [
-    "## Example\n",
-    "\n",
-    "We re-use the [magnetic inversion tutorial]()\n",
+    "## Inputs\n",
     "\n",
     "Direction information can be supplied as either `Dip & Dip direction`, `Dip & Strike` or as `3D Vector` data group. \n",
     "\n",
-    "![set_ori](./images/create_orientation.png)\n",
     "\n",
-    "Setting the group through the UI and lowering the norms along the oriented plane.\n",
+    "```{figure} ./images/set_orientation.png\n",
+    "---\n",
+    "scale: 30%\n",
+    "---\n",
+    "   \n",
+    "```\n",
     "\n",
-    "![set_ori](./images/set_orientation.png)"
+    "The `dip` angle is a positive angle (degree) downward from the horizontal. The `strike` and `dip direction` are clockwise angles from North. The `3D vector` defines the unit normal of a plane and is perpendicular to both the `Dip & Dip direction` and `Strike & Dip` vectors.\n",
+    "\n",
+    "```{figure} ./images/gradient_direction.png\n",
+    "---\n",
+    "scale: 30%\n",
+    "---\n",
+    "Illustration for the three supported orientation data: (a) `Dip & Dip direction`, (b)`Dip & Strike` and (c) `3D Vector`.   \n",
+    "```\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa4ead38-6e6d-4591-a276-d2a8d4cf3005",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
